{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 17,
  "lineage": "4b571f06-92b1-5adf-7ead-b2adf8feca2b",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3111",
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-05-22T23:40:53.442-07:00",
            "deletion_policy": "DELETE",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/alchemyst-devops-2026/global/firewalls/allow-http-gateway",
            "log_config": [],
            "name": "allow-http-gateway",
            "network": "https://www.googleapis.com/compute/v1/projects/alchemyst-devops-2026/global/networks/alchemyst-vpc",
            "params": [],
            "priority": 1000,
            "project": "alchemyst-devops-2026",
            "self_link": "https://www.googleapis.com/compute/v1/projects/alchemyst-devops-2026/global/firewalls/allow-http-gateway",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "gateway"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "name": "allow-http-gateway",
            "project": "alchemyst-devops-2026"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2026-05-22T23:40:52.970-07:00",
            "deletion_policy": "DELETE",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/alchemyst-devops-2026/global/firewalls/allow-internal",
            "log_config": [],
            "name": "allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/alchemyst-devops-2026/global/networks/alchemyst-vpc",
            "params": [],
            "priority": 1000,
            "project": "alchemyst-devops-2026",
            "self_link": "https://www.googleapis.com/compute/v1/projects/alchemyst-devops-2026/global/firewalls/allow-internal",
            "source_ranges": [
              "10.0.1.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "name": "allow-internal",
            "project": "alchemyst-devops-2026"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "advanced_machine_features": [
              {
                "enable_nested_virtualization": true,
                "enable_uefi_networking": false,
                "threads_per_core": 0,
                "visible_core_count": 0
              }
            ],
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "UEFI_COMPATIBLE",
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "GVNIC",
                  "SEV_CAPABLE",
                  "SEV_LIVE_MIGRATABLE_V2"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20260513",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/alchemyst-devops-2026/zones/us-central1-a/disks/gateway-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Cascade Lake",
            "creation_timestamp": "2026-05-23T00:20:41.683-07:00",
            "current_status": "RUNNING",
            "deletion_policy": "DELETE",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/alchemyst-devops-2026/zones/us-central1-a/instances/gateway-vm",
            "instance_id": "642539424185117606",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "n2-standard-2",
            "metadata_fingerprint": "vD8sspBjsQk=",
            "metadata_startup_script": "#!/bin/bash\nset -e\n\n# Install dependencies\napt-get update -y\napt-get install -y curl git nodejs npm\n\n# Install iii\ncurl -fsSL https://install.iii.dev/iii/main/install.sh | sh\nexport PATH=$PATH:/root/.local/bin\n\n# Clone repo\ngit clone https://github.com/Suryansh0910/alchemyst-devops-assignment.git /opt/quickstart\ncd /opt/quickstart\n\n# Fix config to bind engine on all interfaces\nsed -i 's/host: 127.0.0.1/host: 0.0.0.0/' config.yaml\n\n# Creat [...]
            "name": "gateway-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.9.59.133",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/alchemyst-devops-2026/global/networks/alchemyst-vpc",
                "network_ip": "10.0.1.6",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/alchemyst-devops-2026/regions/us-central1/subnetworks/alchemyst-subnet",
                "subnetwork_project": "alchemyst-devops-2026",
                "vlan": 0
              }
            ],
            "project": "alchemyst-devops-2026",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/alchemyst-devops-2026/zones/us-central1-a/instances/gateway-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "gateway"
            ],
            "tags_fingerprint": "UrM6jlsUTDs=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "inference",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "UEFI_COMPATIBLE",
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "GVNIC",
                  "SEV_CAPABLE",
                  "SEV_LIVE_MIGRATABLE_V2"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20260513",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/alchemyst-devops-2026/zones/us-central1-a/disks/inference-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2026-05-23T00:21:08.300-07:00",
            "current_status": "RUNNING",
            "deletion_policy": "DELETE",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/alchemyst-devops-2026/zones/us-central1-a/instances/inference-vm",
            "instance_id": "487879219519220619",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-standard-2",
            "metadata_fingerprint": "pE9QpUAgAks=",
            "metadata_startup_script": "#!/bin/bash\nset -e\n\napt-get update -y\napt-get install -y curl git python3 python3-pip\n\n# Install iii\ncurl -fsSL https://install.iii.dev/iii/main/install.sh | sh\nexport PATH=$PATH:/root/.local/bin\n\n# Clone repo\ngit clone https://github.com/Suryansh0910/alchemyst-devops-assignment.git /opt/quickstart\ncd /opt/quickstart\n\n# Create systemd service for inference-worker\ncat \u003e /etc/systemd/system/inference-worker.service \u003c\u003c 'UNIT'\n[U [...]
            "name": "inference-vm",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/alchemyst-devops-2026/global/networks/alchemyst-vpc",
                "network_ip": "10.0.1.7",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/alchemyst-devops-2026/regions/us-central1/subnetworks/alchemyst-subnet",
                "subnetwork_project": "alchemyst-devops-2026",
                "vlan": 0
              }
            ],
            "project": "alchemyst-devops-2026",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/alchemyst-devops-2026/zones/us-central1-a/instances/inference-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "inference"
            ],
            "tags_fingerprint": "M2fE5w5aGxM=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_instance.gateway",
            "google_compute_network.vpc",
            "google_compute_subnetwork.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_bgp_always_compare_med": false,
            "delete_default_routes_on_create": false,
            "deletion_policy": "DELETE",
            "enable_ula_internal_ipv6": false,
            "id": "projects/alchemyst-devops-2026/global/networks/alchemyst-vpc",
            "mtu": 0,
            "name": "alchemyst-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "5952329488332081",
            "numeric_id": "5952329488332081",
            "project": "alchemyst-devops-2026",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/alchemyst-devops-2026/global/networks/alchemyst-vpc"
          },
          "identity_schema_version": 1,
          "identity": {
            "name": "alchemyst-vpc",
            "project": "alchemyst-devops-2026"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_subnet_cidr_routes_overlap": false,
            "creation_timestamp": "2026-05-22T23:40:54.509-07:00",
            "deletion_policy": "DELETE",
            "gateway_address": "10.0.1.1",
            "id": "projects/alchemyst-devops-2026/regions/us-central1/subnetworks/alchemyst-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "alchemyst-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/alchemyst-devops-2026/global/networks/alchemyst-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "alchemyst-devops-2026",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/alchemyst-devops-2026/regions/us-central1/subnetworks/alchemyst-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 7331626704789370137
          },
          "identity_schema_version": 1,
          "identity": {
            "name": "alchemyst-subnet",
            "project": "alchemyst-devops-2026",
            "region": "us-central1"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}